@@ -1,0 +1,72 @@
+# BEGIN PLOT /CMS_2013_I1122847/d0
+YLabel=$A_{FB}$
+LogX=1
+LogY=0
+YMin=-0.2
+YMax=0.5
+LegendXPos=0.1
+RatioPlotMode=deviation
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d01-x01-y0
+XLabel=$M(\mu^{+} \mu^{-})$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d01-x01-y01
+Title=Drell-Yan Asymmetry, $|y| < 1.00$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d01-x01-y02
+Title=Drell-Yan Asymmetry, $1.0 < |y| < 1.25$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d01-x01-y03
+Title=Drell-Yan Asymmetry, $1.25 < |y| < 1.50$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d01-x01-y04
+Title=Drell-Yan Asymmetry, $1.50 < |y| < 2.40$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+
+# BEGIN PLOT /CMS_2013_I1122847/d02-x01-y0
+XLabel=$M(e^{+} e^{-})$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d02-x01-y01
+Title=Drell-Yan Asymmetry, $0.0 < |y| < 1.00$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d02-x01-y02
+Title=Drell-Yan Asymmetry, $1.0 < |y| < 1.25$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d02-x01-y03
+Title=Drell-Yan Asymmetry, $1.25 < |y| < 1.50$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d02-x01-y04
+Title=Drell-Yan Asymmetry, $1.50 < |y| < 2.40$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+
+# BEGIN PLOT /CMS_2013_I1122847/d03-x01-y0
+XLabel=$M(l^{+} l^{-})$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d03-x01-y01
+Title=Drell-Yan Asymmetry, $|y| < 1.00$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d03-x01-y02
+Title=Drell-Yan Asymmetry, $1.0 < |y| < 1.25$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d03-x01-y03
+Title=Drell-Yan Asymmetry, $1.25 < |y| < 1.50$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2013_I1122847/d03-x01-y04
+Title=Drell-Yan Asymmetry, $1.50 < |y| < 2.40$, $\sqrt{s} = 7$ TeV
+# END PLOT
+
