@@ -1,0 +1,202 @@
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d01-x01-y01
+Path=/REF/CMS_2013_I1122847/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.017	0.011	0.011
+55.0	5.0	5.0			-0.016	0.009	0.009
+68.0	8.0	8.0			-0.04	0.008	0.008
+81.0	5.0	5.0			-0.026	0.006	0.006
+91.0	5.0	5.0			0.006	0.001	0.001
+101.0	5.0	5.0			0.028	0.005	0.005
+113.0	7.0	7.0			0.062	0.01	0.01
+135.0	15.0	15.0			0.067	0.012	0.012
+175.0	25.0	25.0			0.151	0.018	0.018
+300.0	100.0	100.0			0.14	0.023	0.023
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d01-x01-y02
+Path=/REF/CMS_2013_I1122847/d01-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.029	0.023	0.023
+55.0	5.0	5.0			-0.043	0.019	0.019
+68.0	8.0	8.0			-0.109	0.018	0.018
+81.0	5.0	5.0			-0.072	0.014	0.014
+91.0	5.0	5.0			0.019	0.002	0.002
+101.0	5.0	5.0			0.085	0.013	0.013
+113.0	7.0	7.0			0.114	0.022	0.022
+135.0	15.0	15.0			0.165	0.028	0.028
+175.0	25.0	25.0			0.278	0.042	0.042
+300.0	100.0	100.0			0.315	0.054	0.054
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d01-x01-y03
+Path=/REF/CMS_2013_I1122847/d01-x01-y03
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.009	0.023	0.023
+55.0	5.0	5.0			-0.044	0.02	0.02
+68.0	8.0	8.0			-0.122	0.018	0.018
+81.0	5.0	5.0			-0.078	0.016	0.016
+91.0	5.0	5.0			0.021	0.003	0.003
+101.0	5.0	5.0			0.142	0.016	0.016
+113.0	7.0	7.0			0.209	0.026	0.026
+135.0	15.0	15.0			0.235	0.032	0.032
+175.0	25.0	25.0			0.244	0.045	0.045
+300.0	100.0	100.0			0.43	0.069	0.069
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d01-x01-y04
+Path=/REF/CMS_2013_I1122847/d01-x01-y04
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.042	0.015	0.015
+55.0	5.0	5.0			-0.093	0.015	0.015
+68.0	8.0	8.0			-0.121	0.014	0.014
+81.0	5.0	5.0			-0.138	0.024	0.024
+91.0	5.0	5.0			0.026	0.002	0.002
+101.0	5.0	5.0			0.122	0.036	0.036
+113.0	7.0	7.0			0.148	0.023	0.023
+135.0	15.0	15.0			0.215	0.029	0.029
+175.0	25.0	25.0			0.266	0.042	0.042
+300.0	100.0	100.0			0.356	0.062	0.062
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d02-x01-y01
+Path=/REF/CMS_2013_I1122847/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.008	0.018	0.018
+55.0	5.0	5.0			-0.02	0.014	0.014
+68.0	8.0	8.0			-0.037	0.011	0.011
+81.0	5.0	5.0			-0.016	0.009	0.009
+91.0	5.0	5.0			0.006	0.001	0.001
+101.0	5.0	5.0			0.019	0.008	0.008
+113.0	7.0	7.0			0.056	0.013	0.013
+135.0	15.0	15.0			0.079	0.014	0.014
+175.0	25.0	25.0			0.065	0.021	0.021
+300.0	100.0	100.0			0.153	0.025	0.025
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d02-x01-y02
+Path=/REF/CMS_2013_I1122847/d02-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			0.0	0.045	0.045
+55.0	5.0	5.0			-0.005	0.038	0.038
+68.0	8.0	8.0			-0.064	0.026	0.026
+81.0	5.0	5.0			0.0	0.024	0.024
+91.0	5.0	5.0			0.016	0.004	0.004
+101.0	5.0	5.0			0.086	0.022	0.022
+113.0	7.0	7.0			0.1	0.032	0.032
+135.0	15.0	15.0			0.219	0.033	0.033
+175.0	25.0	25.0			0.231	0.046	0.046
+300.0	100.0	100.0			0.369	0.06	0.06
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d02-x01-y03
+Path=/REF/CMS_2013_I1122847/d02-x01-y03
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			0.055	0.057	0.057
+55.0	5.0	5.0			-0.134	0.041	0.041
+68.0	8.0	8.0			-0.185	0.029	0.029
+81.0	5.0	5.0			-0.013	0.031	0.031
+91.0	5.0	5.0			0.02	0.004	0.004
+101.0	5.0	5.0			0.157	0.026	0.026
+113.0	7.0	7.0			0.146	0.036	0.036
+135.0	15.0	15.0			0.253	0.038	0.038
+175.0	25.0	25.0			0.354	0.054	0.054
+300.0	100.0	100.0			0.338	0.061	0.061
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d02-x01-y04
+Path=/REF/CMS_2013_I1122847/d02-x01-y04
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.107	0.042	0.042
+55.0	5.0	5.0			-0.047	0.032	0.032
+68.0	8.0	8.0			-0.133	0.024	0.024
+81.0	5.0	5.0			-0.084	0.028	0.028
+91.0	5.0	5.0			0.021	0.004	0.004
+101.0	5.0	5.0			0.124	0.026	0.026
+113.0	7.0	7.0			0.178	0.033	0.033
+135.0	15.0	15.0			0.261	0.032	0.032
+175.0	25.0	25.0			0.178	0.046	0.046
+300.0	100.0	100.0			0.314	0.059	0.059
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d03-x01-y01
+Path=/REF/CMS_2013_I1122847/d03-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.014	0.022022715545545243	0.022022715545545243
+55.0	5.0	5.0			-0.017	0.013000000000000001	0.013000000000000001
+68.0	8.0	8.0			-0.039	0.011180339887498949	0.011180339887498949
+81.0	5.0	5.0			-0.022	0.012806248474865698	0.012806248474865698
+91.0	5.0	5.0			0.006	0.001414213562373095	0.001414213562373095
+101.0	5.0	5.0			0.024	0.01341640786499874	0.01341640786499874
+113.0	7.0	7.0			0.06	0.01341640786499874	0.01341640786499874
+135.0	15.0	15.0			0.072	0.017204650534085254	0.017204650534085254
+175.0	25.0	25.0			0.116	0.03944616584663204	0.03944616584663204
+300.0	100.0	100.0			0.147	0.04243819034784589	0.04243819034784589
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d03-x01-y02
+Path=/REF/CMS_2013_I1122847/d03-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.022	0.03721558813185679	0.03721558813185679
+55.0	5.0	5.0			-0.034	0.03383784863137727	0.03383784863137727
+68.0	8.0	8.0			-0.095	0.03397057550292606	0.03397057550292606
+81.0	5.0	5.0			-0.046	0.029410882339705485	0.029410882339705485
+91.0	5.0	5.0			0.018	0.005	0.005
+101.0	5.0	5.0			0.085	0.042544094772365294	0.042544094772365294
+113.0	7.0	7.0			0.109	0.03676955262170047	0.03676955262170047
+135.0	15.0	15.0			0.185	0.04243819034784589	0.04243819034784589
+175.0	25.0	25.0			0.261	0.057801384066473706	0.057801384066473706
+300.0	100.0	100.0			0.34	0.07874642849044013	0.07874642849044013
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d03-x01-y03
+Path=/REF/CMS_2013_I1122847/d03-x01-y03
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			0.002	0.07119691004531026	0.07119691004531026
+55.0	5.0	5.0			-0.064	0.04459820624195552	0.04459820624195552
+68.0	8.0	8.0			-0.14	0.03397057550292606	0.03397057550292606
+81.0	5.0	5.0			-0.055	0.03605551275463989	0.03605551275463989
+91.0	5.0	5.0			0.021	0.004242640687119285	0.004242640687119285
+101.0	5.0	5.0			0.147	0.04964876634922563	0.04964876634922563
+113.0	7.0	7.0			0.187	0.044553338819890924	0.044553338819890924
+135.0	15.0	15.0			0.242	0.04743416490252569	0.04743416490252569
+175.0	25.0	25.0			0.283	0.07324616030891995	0.07324616030891995
+300.0	100.0	100.0			0.39	0.08558621384311844	0.08558621384311844
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2013_I1122847/d03-x01-y04
+Path=/REF/CMS_2013_I1122847/d03-x01-y04
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+45.0	5.0	5.0			-0.053	0.06555150646628954	0.06555150646628954
+55.0	5.0	5.0			-0.084	0.04964876634922563	0.04964876634922563
+68.0	8.0	8.0			-0.124	0.03858756276314948	0.03858756276314948
+81.0	5.0	5.0			-0.114	0.053	0.053
+91.0	5.0	5.0			0.024	0.004242640687119285	0.004242640687119285
+101.0	5.0	5.0			0.123	0.07638062581571324	0.07638062581571324
+113.0	7.0	7.0			0.158	0.03920459156782532	0.03920459156782532
+135.0	15.0	15.0			0.231	0.047201694884823786	0.047201694884823786
+175.0	25.0	25.0			0.234	0.05994163828258283	0.05994163828258283
+300.0	100.0	100.0			0.34	0.09567131231461184	0.09567131231461184
+# END YODA_SCATTER2D 
