@@ -185,6 +185,7 @@ RivetCMSAnalyses_la_SOURCES = \
     CMS_2012_I1107658.cc \
     CMS_2012_I1184941.cc \
     CMS_2012_I1193338.cc \
+    CMS_2013_I1122847.cc \
     CMS_2013_I1208923.cc \
     CMS_2013_I1209721.cc \
     CMS_2013_I1218372.cc \
