@@ -1,3 +1,7 @@
+2015-09-28  Holger Schulz  <holger.schulz@durham.ac.uk>
+
+	* Adding CMS_2013_I1122847 FB assymetry in DY analysis
+
 2015-09-28  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding CMS_2015_I1385107 LHA pp 2.76 TeV track-jet underlying event.
